# cegpy

./: .all-contributorsrc  .gitignore  .readthedocs.yaml  CHANGELOG  Dockerfile  LICENSE  README.md  Untitled.ipynb  build_cegpy.sh  clean_pytest.sh  et_fig_path  example.py  postBuild  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-image.yml  python-app.yaml  python-app.yml
cegpy/: __init__.py
cegpy/chain_event_graph/: chain_event_graph.py
cegpy/ct_chain_event_graph/: ct_chain_event_graph.py
cegpy/event_tree/: test_event_tree.py
cegpy/graphs/: _ceg.py  _ceg_reducer.py  _reduced_ceg.py  _tceg.py
cegpy/trees/: _event.py  _staged.py
cegpy/utilities/: __init__.py  _util.py
data/: Asym.csv  Falls_Data.xlsx  Falls_Data_test.xlsx  Falls_Dynamic_Data.xlsx  Falls_posterior_prior.xlsx  medical_dm_modified.xlsx  medical_dm_modified_test.xlsx  medical_dm_posterior_prior.xlsx
docs/: Makefile  _config.yml  _toc.yml  build_docs.sh  conf.py  event_tree.rst  index.rst  intro.md  quickstart_chain_event_graph.rst  quickstart_chain_event_graph_reducer.rst  quickstart_staged_tree.ipynb  quickstart_staged_tree.rst  usage.rst
docs/api/: chain_event_graph.rst  chain_event_graph_reducer.rst  event_tree.rst  staged_tree.rst
docs/quickstart/: quickstart_ceg.md  quickstart_ceg_notebook.ipynb  quickstart_cegr.md  quickstart_cegr_notebook.ipynb  quickstart_dot_graph_modification.ipynb  quickstart_st.md  quickstart_staged_tree_notebook.ipynb
docs/source/: chain_event_graph.rst  chain_event_graph_reducer.rst  class_architecture.drawio  conf.py  index.rst  staged_tree.rst
docs_old/: api.rst  conf.py  quickstart_staged_tree.rst  requirements.txt
examples/: example.py  numerical_sampling_zeros.py
integration/: test_integration.py
scripts/: build_cegpy.sh  build_cegpy_test.sh
src/: __init__.py
src/ceg_util/: ceg_util.py  test_ceg_util.py
src/cegpy/: __init__.py  example.py
src/chain_event_graph/: chain_event_graph.py  test_chain_event_graph.py
src/event-tree/: event_tree.py  (+1 more)
tests/: __test.py  test_ceg.py  test_ceg_reducer.py  test_event.py  test_reduced_ceg.py  test_staged.py  test_tceg.py  test_util.py
(+34 files in other folders)
