[metadata]
name = pyceg
version = 0.0.1
author = Gareth Walley
author_email = gareth@walley.me
description = Package for creating, manipulating, and analysing Chain Event Graphs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/g-walley/pyceg
project_urls =
    Bug Tracker = https://github.com/g-walley/pyceg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
