[metadata]
name = cegpy
version = 0.3
author = Gareth Walley
author_email = gareth@walley.me
description = Package for creating, manipulating, and analysing Chain Event Graphs. Built on networkx.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/g-walley/cegpy
project_urls =
    Bug Tracker = https://github.com/g-walley/cegpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas >=1.3.0
    pydotplus >=2.0.2
    pathlib >=1.0.1
    ipython >=7.25.0
    openpyxl >=3.0.7
    scipy >=1.7.0
    colorutils >=0.3.0
    networkx >=2.6.3

license_files=
    LICENSE
[options.packages.find]
where = src
